--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,3 +1,5 @@
+.justify-start{justify-content: flex-start;}
 .faq-ans-list {list-style: disc;padding:0 0 0 20px;}
 .faq-ans-list li{margin:0 0 3px;}
-.vis-mis-block{background:rgba(0,0,0,0.1);border-radius:10px;}
+.vis-mis-block{background:rgba(0,0,0,0.1);border-radius:10px;padding:10px;height:100%;}
+.dev-process .vis-mis-block{padding:20px 10px;border-left:4px solid #335eea;border-radius:10px;}
