--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -3,3 +3,12 @@
 .faq-ans-list li{margin:0 0 3px;}
 .vis-mis-block{background:rgba(0,0,0,0.1);border-radius:10px;padding:10px;height:100%;}
 .dev-process .vis-mis-block{padding:20px 10px;border-left:4px solid #335eea;border-radius:10px;}
+.back-to-top{position:absolute;right:0;bottom:0;}
+@media only screen and (max-width: 719px){
+    .service-block{
+        flex-direction: column;
+    }
+    .service-block .content{margin-left:0;}
+    .home-stat-grid{display: block;}
+    .home-stat-col{width:100%;}
+}
